tests/paczka1/small_fuzzy/80884609.err
Error in line 1: muut8kK A646 71,9
Error in line 5: muut8kK S515 48,1
